2007-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/3281
	PR binutils/5037
	* ldexp.h (ldexp_control): Add relro, relro_start_stat and
	relro_end_stat.

	* ldexp.c (fold_binary): Set expld.dataseg.relro to
	exp_dataseg_relro_start or exp_dataseg_relro_end when
	seeing DATA_SEGMENT_ALIGN or DATA_SEGMENT_RELRO_END,
	respectively.

	* ldlang.c (lang_size_sections_1): Properly set
	expld.dataseg.relro_start_stat and
	expld.dataseg.relro_end_stat.
	(find_relro_section_callback): New function.
	(lang_find_relro_sections_1): Likewise.
	(lang_find_relro_sections): Likewise.
	(lang_process): Call lang_find_relro_sections for
	non-relocatable link.

2007-09-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.

2007-09-16  H.J. Lu  <hongjiu.lu@intel.com>

	* emultempl/elf32.em: Check DF_BIND_NOW instead of DT_BIND_NOW.

2007-09-15  Alan Modra  <amodra@bigpond.net.au>

	PR ld/5025
	* emultempl/elf32.em (write_build_id_section): Correct test for
	"missing" .note.gnu.build-id.  Downgrade error to a warning if
	it has been discarded.

2007-09-08  Alan Modra  <amodra@bigpond.net.au>

	* ldwrite.c (build_link_order <lang_padding_statement_enum>): Correct
	condition under which we build a bfd_data_link_order.

2007-08-31  Tristan Gingold  <gingold@adacore.com>

	* ldlang.c (lang_map): Increment lang_statement_iteration so that
	DEFINED() expressions are correctly computed.

2007-08-31  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (lang_record_phdrs): Give a fatal error if no sections
	assigned to phdrs.  Avoid multiple forward scans for a section
	with phdr assignment.

2007-08-28  Mark Shinwell  <shinwell@codesourcery.com>
            Joseph Myers  <joseph@codesourcery.com>

	* ldlang.c (sort_sections_by_lma): Sort by internal id after lma
	for stable sort.

2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>

	* configure.host: Add support for i[3-7]86-*-dragonfly*.
	* configure.tgt: Likewise.
